Styles for expectations section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,21 +28,23 @@
   <main>
     <section class="expectations">
       <h2>Мои ожидания</h2>
-      <div class="freedom">
-        <h3>Свобода</h3>
-        <p>Разработка медиаплана, анализируя результаты рекламной компании, нейтрализует эмпирический портрет потребителя.</p>
-      </div>
-      <div class="equality">
-        <h3>Равенство</h3>
-        <p>Медиапланирование концентрирует пресс-клиппинг</p>
-      </div>
-      <div class="brotherhood">
-        <h3>Братство</h3>
-        <p>Тем не менее, создание приверженного покупателя конструктивно.</p>
-      </div>
-      <div class="employment">
-        <h3>Трудоустройство</h3>
-        <p>Корпоративная культура без оглядки на авторитеты решительно отражает рекламоноситель.</p>
+      <div class="grid">
+        <div class="freedom">
+          <h3>Свобода</h3>
+          <p>Разработка медиаплана, анализируя результаты рекламной компании, нейтрализует эмпирический портрет потребителя.</p>
+        </div>
+        <div class="equality">
+          <h3>Равенство</h3>
+          <p>Медиапланирование концентрирует пресс-клиппинг</p>
+        </div>
+        <div class="brotherhood">
+          <h3>Братство</h3>
+          <p>Тем не менее, создание приверженного покупателя конструктивно.</p>
+        </div>
+        <div class="employment">
+          <h3>Трудоустройство</h3>
+          <p>Корпоративная культура без оглядки на авторитеты решительно отражает рекламоноситель.</p>
+        </div>
       </div>
     </section>
     <section class="works">
