--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,30 +50,35 @@
     <section class="works">
       <h2>Мои работы</h2>
       <div class="case">
-        <img src="" alt="">
+        <img src="" alt="project demo">
         <div class="description">
-          <h4>Моды и шляпы</h4>
-          <span class="link">lamoda.ru</span>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, eveniet sunt? Mollitia suscipit animi beatae ipsam
-            quidem eveniet, quos nulla explicabo cupiditate, cum, nostrum rem dolores nemo eos sit molestiae.</p>
+          <h4>CarFinder</h4>
+          <a target="_blank" href="https://github.com/CarFinder/CarFinderClient" class="link">github.com</a>
+          <p>An app that aggregates car advertisements from most major Belarusian car-selling platforms.</p>
         </div>
       </div>
       <div class="case">
-        <img src="" alt="">
+        <img src="" alt="project demo">
         <div class="description">
-          <h4>Моды и шляпы</h4>
-          <span class="link">lamoda.ru</span>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, eveniet sunt? Mollitia suscipit animi beatae ipsam
-            quidem eveniet, quos nulla explicabo cupiditate, cum, nostrum rem dolores nemo eos sit molestiae.</p>
+          <h4>Imaguru Meetup Organizer App</h4>
+          <a target="_blank" href="https://github.com/AnatolyBelobrovik/VueDevMeetupApp" class="link">github.com</a>
+          <p>An app for organizing meetups.</p>
         </div>
       </div>
       <div class="case">
-        <img src="" alt="">
+        <img src="" alt="project demo">
         <div class="description">
-          <h4>Моды и шляпы</h4>
-          <span class="link">lamoda.ru</span>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, eveniet sunt? Mollitia suscipit animi beatae ipsam
-            quidem eveniet, quos nulla explicabo cupiditate, cum, nostrum rem dolores nemo eos sit molestiae.</p>
+          <h4>Task Tracker</h4>
+          <a target="_blank" href="https://github.com/AnatolyBelobrovik/TaskTracker" class="link">github.com</a>
+          <p>Task Tracking System for Managers and Developers.</p>
+        </div>
+      </div>
+      <div class="case">
+        <img src="" alt="project demo">
+        <div class="description">
+          <h4>Survey App</h4>
+          <a target="_blank" href="https://github.com/AnatolyBelobrovik/SurveyApp" class="link">github.com</a>
+          <p>An app that provides an option to manage your surveys.</p>
         </div>
       </div>
     </section>
@@ -81,8 +86,9 @@
   <footer class="footer">
     <h2>Контактная информация</h2>
     <div>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi odio harum impedit ea asperiores corporis distinctio
-        animi maxime ipsa temporibus dolorem minus, tenetur unde soluta quod, exercitationem natus rem quaerat!</p>
+      <p>Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание проекта
+        своими словами.
+      </p>
       <div class="links">
         <p>Ссылки на мои соцсети:</p>
         <ul>
