--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Porfolio | Anatoly Belobrovik</title>
+  <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -85,34 +86,41 @@
   </main>
   <footer class="footer">
     <h2>Контактная информация</h2>
-    <div>
-      <p>Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание проекта
-        своими словами.
-      </p>
-      <div class="links">
-        <p>Ссылки на мои соцсети:</p>
-        <ul>
-          <li>
-            <a href="#">Facebook</a>
-          </li>
-          <li>
-            <a href="#">ВКонтакте</a>
-          </li>
-          <li>
-            <a href="#">GitHub</a>
-          </li>
-          <li>
-            <a href="#">Twitter</a>
-          </li>
-        </ul>
+    <div class="footer-content">
+      <div>
+        <p>Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание
+          проекта своими словами.
+        </p>
+        <div class="links">
+          <p>Ссылки на мои соцсети:</p>
+          <ul>
+            <li>
+              <i class="fab fa-facebook"></i>
+              <a href="#">Facebook</a>
+            </li>
+            <li>
+              <i class="fab fa-vk"></i>
+              <a href="#">ВКонтакте</a>
+            </li>
+            <li>
+              <i class="fab fa-github"></i>
+              <a href="#">GitHub</a>
+            </li>
+            <li>
+              <i class="fab fa-twitter"></i>
+              <a href="#">Twitter</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <form className="contact-form">
+      <form class="contact-form">
         <input type="text" name="name" id="name" value="" placeholder="Имя">
         <input type="email" name="email" id="email" value="" placeholder="Почтовый ящик">
         <textarea name="message" id="message" rows="4" placeholder="Сообщение"></textarea>
-        <div>
-          <label for="file">Прикрепить ТЗ</label>
-          <input type="file" name="file" id="file">
+        <div class="file">
+          <input type="file" name="file" id="file" class="file-input">
+          <label for="file" class="file-label">
+            <i class="fas fa-file"></i> Прикрепить ТЗ</label>
         </div>
         <button type="submit">Отправить</button>
       </form>
