Define basic grid layout

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,120 +11,122 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header__photo"></div>
-    <div class="header__intro">
-      <div>
-        <h4>Фронт-енд разработчик</h4>
-        <h2>Анатолий Белобровик</h2>
-      </div>
-      <p>
-        Рекламный макет подсознательно экономит JavaScript. Несмотря на сложности, ребрендинг Sass, LESS, PostCSS. Медиавес, конечно,
-        стабилизирует экспериментальный традиционный Gulp, Webpack. Построение бренда специфицирует Python жизненный цикл
-        продукции. К тому же каждая сфера рынка выражена наиболее полно. Медиабизнес искажает комплексный системный анализ
-      </p>
-    </div>
-  </header>
-  <main>
-    <section class="expectations">
-      <h2 class="expectations__title">Мои ожидания</h2>
-      <div class="expectations__grid">
-        <div class="expectations__grid__item">
-          <h3>Свобода</h3>
-          <p>Разработка медиаплана, анализируя результаты рекламной компании, нейтрализует эмпирический портрет потребителя.</p>
-        </div>
-        <div class="expectations__grid__item">
-          <h3>Равенство</h3>
-          <p>Медиапланирование концентрирует пресс-клиппинг</p>
-        </div>
-        <div class="expectations__grid__item">
-          <h3>Братство</h3>
-          <p>Тем не менее, создание приверженного покупателя конструктивно.</p>
-        </div>
-        <div class="expectations__grid__item">
-          <h3>Трудоустройство</h3>
-          <p>Корпоративная культура без оглядки на авторитеты решительно отражает рекламоноситель.</p>
-        </div>
-      </div>
-    </section>
-    <section class="works">
-      <h2 class="works__title">Мои работы</h2>
-      <div class="works__item">
-        <img src="" alt="project demo">
-        <div class="works__item__description">
-          <h4>CarFinder</h4>
-          <a target="_blank" href="https://github.com/CarFinder/CarFinderClient" class="works__item__link">github.com</a>
-          <p>An app that aggregates car advertisements from most major Belarusian car-selling platforms.</p>
-        </div>
-      </div>
-      <div class="works__item">
-        <img src="" alt="project demo">
-        <div class="works__item__description">
-          <h4>Imaguru Meetup Organizer App</h4>
-          <a target="_blank" href="https://github.com/AnatolyBelobrovik/VueDevMeetupApp" class="works__item__link">github.com</a>
-          <p>An app for organizing meetups.</p>
-        </div>
-      </div>
-      <div class="works__item">
-        <img src="" alt="project demo">
-        <div class="works__item__description">
-          <h4>Task Tracker</h4>
-          <a target="_blank" href="https://github.com/AnatolyBelobrovik/TaskTracker" class="works__item__link">github.com</a>
-          <p>Task Tracking System for Managers and Developers.</p>
-        </div>
-      </div>
-      <div class="works__item">
-        <img src="" alt="project demo">
-        <div class="works__item__description">
-          <h4>Survey App</h4>
-          <a target="_blank" href="https://github.com/AnatolyBelobrovik/SurveyApp" class="works__item__link">github.com</a>
-          <p>An app that provides an option to manage your surveys.</p>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <h2 class="footer__title">Контактная информация</h2>
-    <div class="footer__content">
-      <div>
-        <p>Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание
-          проекта своими словами.
-        </p>
+  <div class="container">
+    <header class="header">
+      <div class="header__photo"></div>
+      <div class="header__intro">
         <div>
-          <p>Ссылки на мои соцсети:</p>
-          <ul class="footer__content__links">
-            <li class="footer__content__links__link">
-              <i class="fab fa-facebook"></i>
-              <a href="#">Facebook</a>
-            </li>
-            <li class="footer__content__links__link">
-              <i class="fab fa-vk"></i>
-              <a href="#">ВКонтакте</a>
-            </li>
-            <li class="footer__content__links__link">
-              <i class="fab fa-github"></i>
-              <a href="#">GitHub</a>
-            </li>
-            <li class="footer__content__links__link">
-              <i class="fab fa-twitter"></i>
-              <a href="#">Twitter</a>
-            </li>
-          </ul>
+          <h4>Фронт-енд разработчик</h4>
+          <h2>Анатолий Белобровик</h2>
         </div>
+        <p>
+          Рекламный макет подсознательно экономит JavaScript. Несмотря на сложности, ребрендинг Sass, LESS, PostCSS. Медиавес, конечно,
+          стабилизирует экспериментальный традиционный Gulp, Webpack. Построение бренда специфицирует Python жизненный цикл
+          продукции. К тому же каждая сфера рынка выражена наиболее полно. Медиабизнес искажает комплексный системный анализ
+        </p>
       </div>
-      <form class="form">
-        <input class="form__input" type="text" name="name" id="name" value="" placeholder="Имя">
-        <input class="form__input" type="email" name="email" id="email" value="" placeholder="Почтовый ящик">
-        <textarea class="form__textarea" name="message" id="message" rows="4" placeholder="Сообщение"></textarea>
-        <div class="form__file">
-          <input type="file" name="file" id="file" class="form__file__input">
-          <label for="file" class="form__file__label">
-            <i class="fas fa-file"></i> Прикрепить ТЗ</label>
+    </header>
+    <main class="content">
+      <section class="expectations">
+        <h2 class="expectations__title">Мои ожидания</h2>
+        <div class="expectations__grid">
+          <div class="expectations__grid__item">
+            <h3>Свобода</h3>
+            <p>Разработка медиаплана, анализируя результаты рекламной компании, нейтрализует эмпирический портрет потребителя.</p>
+          </div>
+          <div class="expectations__grid__item">
+            <h3>Равенство</h3>
+            <p>Медиапланирование концентрирует пресс-клиппинг</p>
+          </div>
+          <div class="expectations__grid__item">
+            <h3>Братство</h3>
+            <p>Тем не менее, создание приверженного покупателя конструктивно.</p>
+          </div>
+          <div class="expectations__grid__item">
+            <h3>Трудоустройство</h3>
+            <p>Корпоративная культура без оглядки на авторитеты решительно отражает рекламоноситель.</p>
+          </div>
         </div>
-        <button class="form__submit" type="submit">Отправить</button>
-      </form>
-    </div>
-  </footer>
+      </section>
+      <section class="works">
+        <h2 class="works__title">Мои работы</h2>
+        <div class="works__item">
+          <img src="" alt="project demo">
+          <div class="works__item__description">
+            <h4>CarFinder</h4>
+            <a target="_blank" href="https://github.com/CarFinder/CarFinderClient" class="works__item__link">github.com</a>
+            <p>An app that aggregates car advertisements from most major Belarusian car-selling platforms.</p>
+          </div>
+        </div>
+        <div class="works__item">
+          <img src="" alt="project demo">
+          <div class="works__item__description">
+            <h4>Imaguru Meetup Organizer App</h4>
+            <a target="_blank" href="https://github.com/AnatolyBelobrovik/VueDevMeetupApp" class="works__item__link">github.com</a>
+            <p>An app for organizing meetups.</p>
+          </div>
+        </div>
+        <div class="works__item">
+          <img src="" alt="project demo">
+          <div class="works__item__description">
+            <h4>Task Tracker</h4>
+            <a target="_blank" href="https://github.com/AnatolyBelobrovik/TaskTracker" class="works__item__link">github.com</a>
+            <p>Task Tracking System for Managers and Developers.</p>
+          </div>
+        </div>
+        <div class="works__item">
+          <img src="" alt="project demo">
+          <div class="works__item__description">
+            <h4>Survey App</h4>
+            <a target="_blank" href="https://github.com/AnatolyBelobrovik/SurveyApp" class="works__item__link">github.com</a>
+            <p>An app that provides an option to manage your surveys.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <h2 class="footer__title">Контактная информация</h2>
+      <div class="footer__content">
+        <div>
+          <p>Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание
+            проекта своими словами.
+          </p>
+          <div>
+            <p>Ссылки на мои соцсети:</p>
+            <ul class="footer__content__links">
+              <li class="footer__content__links__link">
+                <i class="fab fa-facebook"></i>
+                <a href="#">Facebook</a>
+              </li>
+              <li class="footer__content__links__link">
+                <i class="fab fa-vk"></i>
+                <a href="#">ВКонтакте</a>
+              </li>
+              <li class="footer__content__links__link">
+                <i class="fab fa-github"></i>
+                <a href="#">GitHub</a>
+              </li>
+              <li class="footer__content__links__link">
+                <i class="fab fa-twitter"></i>
+                <a href="#">Twitter</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <form class="form">
+          <input class="form__input" type="text" name="name" id="name" value="" placeholder="Имя">
+          <input class="form__input" type="email" name="email" id="email" value="" placeholder="Почтовый ящик">
+          <textarea class="form__textarea" name="message" id="message" rows="4" placeholder="Сообщение"></textarea>
+          <div class="form__file">
+            <input type="file" name="file" id="file" class="form__file__input">
+            <label for="file" class="form__file__label">
+              <i class="fas fa-file"></i> Прикрепить ТЗ</label>
+          </div>
+          <button class="form__submit" type="submit">Отправить</button>
+        </form>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
