Refactor header with grids

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,18 +13,16 @@
 <body>
   <div class="container">
     <header class="header">
-      <div class="header__photo"></div>
+      <img class="header__photo" src="assets/me.jpg" alt="my photo">
       <div class="header__intro">
-        <div>
-          <h4>Фронт-енд разработчик</h4>
-          <h2>Анатолий Белобровик</h2>
-        </div>
-        <p>
-          Рекламный макет подсознательно экономит JavaScript. Несмотря на сложности, ребрендинг Sass, LESS, PostCSS. Медиавес, конечно,
-          стабилизирует экспериментальный традиционный Gulp, Webpack. Построение бренда специфицирует Python жизненный цикл
-          продукции. К тому же каждая сфера рынка выражена наиболее полно. Медиабизнес искажает комплексный системный анализ
-        </p>
+        <h4 class="header__intro__position">Фронт-енд разработчик</h4>
+        <h2 class="header__intro__name">Анатолий Белобровик</h2>
       </div>
+      <p class="header__description">
+        Рекламный макет подсознательно экономит JavaScript. Несмотря на сложности, ребрендинг Sass, LESS, PostCSS. Медиавес, конечно,
+        стабилизирует экспериментальный традиционный Gulp, Webpack. Построение бренда специфицирует Python жизненный цикл
+        продукции. К тому же каждая сфера рынка выражена наиболее полно. Медиабизнес искажает комплексный системный анализ
+      </p>
     </header>
     <main class="content">
       <section class="expectations">
