Define grid layout for works section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <img class="header__photo" src="assets/me.jpg" alt="my photo">
+      <img class="header__photo" src="assets/images/me.jpg" alt="my photo">
       <div class="header__intro">
         <h4 class="header__intro__position">Фронт-енд разработчик</h4>
         <h2 class="header__intro__name">Анатолий Белобровик</h2>
@@ -49,7 +49,7 @@
       <section class="works">
         <h2 class="works__title">Мои работы</h2>
         <div class="works__item">
-          <img src="" alt="project demo">
+          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>CarFinder</h4>
             <a target="_blank" href="https://github.com/CarFinder/CarFinderClient" class="works__item__link">github.com</a>
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="works__item">
-          <img src="" alt="project demo">
+          <img class="works__item__image" src="" alt="project demo">
           <div class="works__item__description">
             <h4>Imaguru Meetup Organizer App</h4>
             <a target="_blank" href="https://github.com/AnatolyBelobrovik/VueDevMeetupApp" class="works__item__link">github.com</a>
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="works__item">
-          <img src="" alt="project demo">
+          <img class="works__item__image" src="" alt="project demo">
           <div class="works__item__description">
             <h4>Task Tracker</h4>
             <a target="_blank" href="https://github.com/AnatolyBelobrovik/TaskTracker" class="works__item__link">github.com</a>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="works__item">
-          <img src="" alt="project demo">
+          <img class="works__item__image" src="" alt="project demo">
           <div class="works__item__description">
             <h4>Survey App</h4>
             <a target="_blank" href="https://github.com/AnatolyBelobrovik/SurveyApp" class="works__item__link">github.com</a>
