--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="" alt="project demo">
+          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>Imaguru Meetup Organizer App</h4>
             <a target="_blank" href="https://github.com/AnatolyBelobrovik/VueDevMeetupApp" class="works__item__link">github.com</a>
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="" alt="project demo">
+          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>Task Tracker</h4>
             <a target="_blank" href="https://github.com/AnatolyBelobrovik/TaskTracker" class="works__item__link">github.com</a>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="" alt="project demo">
+          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>Survey App</h4>
             <a target="_blank" href="https://github.com/AnatolyBelobrovik/SurveyApp" class="works__item__link">github.com</a>
