--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Porfolio | Anatoly Belobrovik</title>
+  <title>Portfolio | Anatoly Belobrovik</title>
+  <link rel="icon" href="favicon.ico">
   <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -60,7 +61,7 @@
           <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>Imaguru Meetup Organizer App</h4>
-            <a target="_blank" href="https://github.com/AnatolyBelobrovik/VueDevMeetupApp" class="works__item__link">github.com</a>
+            <a target="_blank" href="https://github.com/synthetiquely/VueDevMeetupApp" class="works__item__link">github.com</a>
             <p>An app for organizing meetups.</p>
           </div>
         </div>
@@ -68,7 +69,7 @@
           <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>Task Tracker</h4>
-            <a target="_blank" href="https://github.com/AnatolyBelobrovik/TaskTracker" class="works__item__link">github.com</a>
+            <a target="_blank" href="https://github.com/synthetiquely/TaskTracker" class="works__item__link">github.com</a>
             <p>Task Tracking System for Managers and Developers.</p>
           </div>
         </div>
@@ -76,7 +77,7 @@
           <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
           <div class="works__item__description">
             <h4>Survey App</h4>
-            <a target="_blank" href="https://github.com/AnatolyBelobrovik/SurveyApp" class="works__item__link">github.com</a>
+            <a target="_blank" href="https://github.com/synthetiquely/SurveyApp" class="works__item__link">github.com</a>
             <p>An app that provides an option to manage your surveys.</p>
           </div>
         </div>
@@ -84,45 +85,31 @@
     </main>
     <footer class="footer">
       <h2 class="footer__title">Контактная информация</h2>
-      <div class="footer__content">
-        <div>
-          <p>Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание
-            проекта своими словами.
-          </p>
-          <div>
-            <p>Ссылки на мои соцсети:</p>
-            <ul class="footer__content__links">
-              <li class="footer__content__links__link">
-                <i class="fab fa-facebook"></i>
-                <a href="#">Facebook</a>
-              </li>
-              <li class="footer__content__links__link">
-                <i class="fab fa-vk"></i>
-                <a href="#">ВКонтакте</a>
-              </li>
-              <li class="footer__content__links__link">
-                <i class="fab fa-github"></i>
-                <a href="#">GitHub</a>
-              </li>
-              <li class="footer__content__links__link">
-                <i class="fab fa-twitter"></i>
-                <a href="#">Twitter</a>
-              </li>
-            </ul>
-          </div>
+      <p class="footer__description">Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание проекта
+        своими словами.
+      </p>
+      <ul class="footer__links">
+        <p>Ссылки на мои соцсети:</p>
+        <li class="footer__links__link">
+          <i class="fab fa-telegram footer__links__link__icon"></i>
+          <a target="_blank" href="https://telegram.me/synthetique">Telegram</a>
+        </li>
+        <li class="footer__links__link">
+          <i class="fab fa-github footer__links__link__icon"></i>
+          <a target="_blank" href="https://github.com/synthetiquely">GitHub</a>
+        </li>
+      </ul>
+      <form class="form">
+        <input class="form__input" type="text" name="name" id="name" value="" placeholder="Имя">
+        <input class="form__input" type="email" name="email" id="email" value="" placeholder="Почтовый ящик">
+        <textarea class="form__textarea" name="message" id="message" rows="4" placeholder="Сообщение"></textarea>
+        <div class="form__file">
+          <input type="file" name="file" id="file" class="form__file__input">
+          <label for="file" class="form__file__label">
+            <i class="fas fa-file"></i> Прикрепить ТЗ</label>
         </div>
-        <form class="form">
-          <input class="form__input" type="text" name="name" id="name" value="" placeholder="Имя">
-          <input class="form__input" type="email" name="email" id="email" value="" placeholder="Почтовый ящик">
-          <textarea class="form__textarea" name="message" id="message" rows="4" placeholder="Сообщение"></textarea>
-          <div class="form__file">
-            <input type="file" name="file" id="file" class="form__file__input">
-            <label for="file" class="form__file__label">
-              <i class="fas fa-file"></i> Прикрепить ТЗ</label>
-          </div>
-          <button class="form__submit" type="submit">Отправить</button>
-        </form>
-      </div>
+        <button class="form__submit" type="submit">Отправить</button>
+      </form>
     </footer>
   </div>
 </body>
