Refactor styles to match mobiles / tablets layout

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,9 +20,8 @@
         <h2 class="header__intro__name">Анатолий Белобровик</h2>
       </div>
       <p class="header__description">
-        Рекламный макет подсознательно экономит JavaScript. Несмотря на сложности, ребрендинг Sass, LESS, PostCSS. Медиавес, конечно,
-        стабилизирует экспериментальный традиционный Gulp, Webpack. Построение бренда специфицирует Python жизненный цикл
-        продукции. К тому же каждая сфера рынка выражена наиболее полно. Медиабизнес искажает комплексный системный анализ
+        Привет, меня зовут Анатолий, я фронт-енд разработчик, и ищу возможности улучшить мои навыки веб-разработки. Пишу на следующих
+        технологиях: TypeScript, React, Redux, VueJS, NodeJS, MongoDB, Webpack, Git.
       </p>
     </header>
     <main class="content">
@@ -30,56 +29,144 @@
         <h2 class="expectations__title">Мои ожидания</h2>
         <div class="expectations__grid">
           <div class="expectations__grid__item">
-            <h3>Свобода</h3>
+            <h3>Развитие</h3>
             <p>Разработка медиаплана, анализируя результаты рекламной компании, нейтрализует эмпирический портрет потребителя.</p>
           </div>
           <div class="expectations__grid__item">
-            <h3>Равенство</h3>
-            <p>Медиапланирование концентрирует пресс-клиппинг</p>
+            <h3>Сложные задачи</h3>
+            <p>Возможность работать над решением сложных задач</p>
           </div>
           <div class="expectations__grid__item">
-            <h3>Братство</h3>
+            <h3>Бред</h3>
             <p>Тем не менее, создание приверженного покупателя конструктивно.</p>
           </div>
           <div class="expectations__grid__item">
             <h3>Трудоустройство</h3>
-            <p>Корпоративная культура без оглядки на авторитеты решительно отражает рекламоноситель.</p>
+            <p>Ищу возможности присоединения к команде, работающей над созданием крутых продуктов.</p>
           </div>
         </div>
       </section>
       <section class="works">
         <h2 class="works__title">Мои работы</h2>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
+          <img class="works__item__image" src="assets/images/project11.PNG" alt="project demo">
           <div class="works__item__description">
-            <h4>CarFinder</h4>
-            <a target="_blank" href="https://github.com/CarFinder/CarFinderClient" class="works__item__link">github.com</a>
-            <p>An app that aggregates car advertisements from most major Belarusian car-selling platforms.</p>
+            <div class="works__item__description__meta">
+              <h4>CarFinder</h4>
+              <a target="_blank" href="https://github.com/CarFinder/CarFinderClient" class="works__item__link">github.com</a>
+            </div>
+            <p>Приложение, которое позволяет аггрегировать все актуальные объявления по продаже автомобилей с крупнейших белорусских
+              платформ. Приложение предоставляет фильтры для поиска и показа актуальных объявлений на основе пожеланий пользователя.
+              Также можно сохранять параметры фильтров, чтобы получать уведомления по электронной почте о новых предложениях.
+              Приложение также предоставляет возможность проверить ликвидность автомобиля по модели и типу кузова.
+            </p>
           </div>
+          <ul class="tags">
+            <li>
+              <a class="tags__tag">TypeScript</a>
+            </li>
+            <li>
+              <a class="tags__tag">React</a>
+            </li>
+            <li>
+              <a class="tags__tag">Redux</a>
+            </li>
+            <li>
+              <a class="tags__tag">Bulma</a>
+            </li>
+            <li>
+              <a class="tags__tag">KoaJS</a>
+            </li>
+            <li>
+              <a class="tags__tag">MongoDB/Mongoose</a>
+            </li>
+          </ul>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
+          <img class="works__item__image" src="assets/images/project21.PNG" alt="project demo">
           <div class="works__item__description">
-            <h4>Imaguru Meetup Organizer App</h4>
-            <a target="_blank" href="https://github.com/synthetiquely/VueDevMeetupApp" class="works__item__link">github.com</a>
-            <p>An app for organizing meetups.</p>
+            <div class="works__item__description__meta">
+              <h4>Meetup Organizer</h4>
+              <a target="_blank" href="https://github.com/synthetiquely/VueDevMeetupApp" class="works__item__link">github.com</a>
+            </div>
+            <p>Приложение для организации оффлайн-мероприятий. Позволяет зарегистрироваться и создавать новые мероприятия. Также
+              можно выбрать и присоединиться к уже существующему мероприятию.
+            </p>
           </div>
+          <ul class="tags">
+            <li>
+              <a class="tags__tag">VueJS</a>
+            </li>
+            <li>
+              <a class="tags__tag">Vuex</a>
+            </li>
+            <li>
+              <a class="tags__tag">Vuetify</a>
+            </li>
+            <li>
+              <a class="tags__tag">Firebase</a>
+            </li>
+          </ul>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
+          <img class="works__item__image" src="assets/images/project41.PNG" alt="project demo">
           <div class="works__item__description">
-            <h4>Task Tracker</h4>
-            <a target="_blank" href="https://github.com/synthetiquely/TaskTracker" class="works__item__link">github.com</a>
-            <p>Task Tracking System for Managers and Developers.</p>
+            <div class="works__item__description__meta">
+              <h4>Task Tracker</h4>
+              <a target="_blank" href="https://github.com/synthetiquely/TaskTracker" class="works__item__link">github.com</a>
+            </div>
+            <p>Приложение для организации работы над ИТ-проектами. Возможность зарегистрироваться как менеджер проекта либо
+              разработчик. Менеджеры проекта могут создавать новые проекты, добавлять существующих людей к ним, и управлять
+              работой над ним. Разработчики могут создавать и выполнять задания, писать комментарии к заданиям.
+            </p>
           </div>
+          <ul class="tags">
+            <li>
+              <a class="tags__tag">VueJS</a>
+            </li>
+            <li>
+              <a class="tags__tag">Vuex</a>
+            </li>
+            <li>
+              <a class="tags__tag">Semantic UI</a>
+            </li>
+            <li>
+              <a class="tags__tag">Nodejs</a>
+            </li>
+            <li>
+              <a class="tags__tag">MongoDB/Mongoose</a>
+            </li>
+          </ul>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project1.PNG" alt="project demo">
+          <img class="works__item__image" src="assets/images/project31.PNG" alt="project demo">
           <div class="works__item__description">
-            <h4>Survey App</h4>
-            <a target="_blank" href="https://github.com/synthetiquely/SurveyApp" class="works__item__link">github.com</a>
-            <p>An app that provides an option to manage your surveys.</p>
+            <div class="works__item__description__meta">
+              <h4>Survey App</h4>
+              <a target="_blank" href="https://github.com/synthetiquely/SurveyApp" class="works__item__link">github.com</a>
+            </div>
+            <p>Приложение для организации и проведения опросов. Имеет встроенный конструктор для создания опросов различной
+              сложности. Созданный опрос также можно сохранить как шаблон для использования в будущем. Позволяет искать уже
+              созданные опросы. Предоставляет платформу для проведения и анализа результатов проведения опросов.
+            </p>
           </div>
+          <ul class="tags">
+            <li>
+              <a class="tags__tag">React</a>
+            </li>
+            <li>
+              <a class="tags__tag">Redux</a>
+            </li>
+            <li>
+              <a class="tags__tag">Bootstrap 3</a>
+            </li>
+            <li>
+              <a class="tags__tag">Express</a>
+            </li>
+            <li>
+              <a class="tags__tag">MongoDB/Mongoose</a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
